--- a/Changes
+++ b/Changes
@@ -10,8 +10,9 @@ NOTE: This software is designated as beta quality until this notice is removed. 
 be method matched to Spreadsheet::ParseExcel prior to the 1.0 release.
 
 {{$NEXT}}
-
-	* Another cool change
+	
+	+ fixed several travis-ci fails mostly due to os differences and imported classes
+	+ Finished the main Spreadsheet::Reader::ExcelXML pod (documentation)
 
 v0.1_1    2016-05-05 05:42:17-07:00 America/Los_Angeles (TRIAL RELEASE)
 	
