--- a/README.pod
+++ b/README.pod
@@ -1003,7 +1003,7 @@ B<Definition:> a way to check the current attribute setting
 
 =back
 
-=head1 FLAGS
+=head2 FLAGS
 
 The parameter list (Attributes) that are possible to pass to ->new is somewhat long.  
 Therefore you may want a shortcut that aggregates some set of attribute settings that 
@@ -1018,7 +1018,7 @@ Example;
 
 	use Spreadsheet::Reader::ExcelXML v0.2 qw( :alt_default :debug );
 
-=head2 :alt_default
+=head3 :alt_default
 
 This is intended for a deep look at data and skip formatting cells.
 
@@ -1038,7 +1038,7 @@ L<empty_is_end|/empty_is_end> => 1
 
 =back
 		
-=head2 :just_the_data
+=head3 :just_the_data
 
 This is intended for a shallow look at data with value formatting implemented
 
@@ -1070,7 +1070,7 @@ L<column_formats|/column_formats> => 0
 
 =back
 
-=head2 :just_raw_data
+=head3 :just_raw_data
 
 This is intended for a shallow look at raw text and skips all formatting including number formats.
 
@@ -1102,7 +1102,7 @@ L<column_formats|/column_formats> => 0
 
 =back
 
-=head2 :like_ParseExcel
+=head3 :like_ParseExcel
 
 This is a way to force some of the other groups back to instance and count from zero
 
@@ -1120,7 +1120,7 @@ L<group_return_type|/group_return_type> => 'instance'
 
 =back
 
-=head2 :debug
+=head3 :debug
 
 This is a way to turn on as much reporting as possible
 
@@ -1142,7 +1142,7 @@ L<show_sub_file_size|/show_sub_file_size> => 1
 
 =back
 
-=head2 :lots_of_ram
+=head3 :lots_of_ram
 
 This opens the caching size allowances way up
 
@@ -1162,7 +1162,7 @@ L<cache_positions|/cache_positions> =>{
 
 =back
 
-=head2 :less_ram
+=head3 :less_ram
 
 This tightens caching size allowances way down
 
@@ -1591,9 +1591,9 @@ jandrew@cpan.org
 This is the (likely incomplete) list of people who have helped
 make this distribution what it is, either via code contributions, 
 patches, bug reports, help with troubleshooting, etc. A huge
-'thank you' to all of them.  At this point they all contributed 
-to L<Spreadsheet::XLSX::Reader::LibXML> but the contributions have 
-hopefully carried over.
+'thank you' to all of them.  Most were contributors to 
+L<Spreadsheet::XLSX::Reader::LibXML> but the contributions have 
+(hopefully) not been lost.
 
 =over
 
@@ -1610,6 +1610,8 @@ L<Bill Baker|https://github.com/wdbaker54>
 L<H.Merijin Brand|https://github.com/Tux>
 
 L<Todd Eigenschink|mailto:todd@xymmetrix.com>
+
+L<Slaven Rezić|https://metacpan.org/author/SREZIC>
 
 =back
 
