--- a/Changes
+++ b/Changes
@@ -11,7 +11,8 @@ is to be method matched to Spreadsheet::ParseExcel prior to the v1.0 release.
 
 {{$NEXT}}
 
-	* Another cool change
+	! Fixed Worksheet, Chartsheet, WorksheetToRow, NamedSharedStrings, NamedStyles,
+		PositionSharedStrings, and PositionStyles POD titles
 
 v0.10.0   2016-05-15 05:21:48-07:00 America/Los_Angeles
 
