--- a/README.pod
+++ b/README.pod
@@ -115,7 +115,7 @@ There are additional methods and other approaches that can be used by this packa
 spreadsheet reading but the basic access to data from newer xml based Excel files can be
 as simple as above.
 
-This is L<not the only perl package|SEE ALSO> able to parse .xlsx files on METACPAN.  For
+This is L<not the only perl package|/SEE ALSO> able to parse .xlsx files on METACPAN.  For
 now it does appear to be the only package that will parse .xlsm and Excel 2003 .xml
 workbooks.
 
@@ -1668,9 +1668,9 @@ L<Spreadsheet::Read> - generic Spreadsheet reader
 
 L<Spreadsheet::ParseExcel> - Excel binary files from 2003 and earlier
 
-L<Spreadsheet::XLSX> - Excel version 2007 and later
-
 L<Spreadsheet::ParseXLSX> - Excel version 2007 and later
+
+L<Spreadsheet::XLSX> - Excel version 2007 and later (Very rough)
 
 L<Log::Shiras|https://github.com/jandrew/Log-Shiras>
 
