Added one additional test to help diagnose perl 5.16 fails on TravisCI

--- a/README.pod
+++ b/README.pod
@@ -1133,11 +1133,13 @@ B<Default attribute differences>
 
 =over
 
-L<error_inst|/error_inst> =>{
-								superclasses => ['Spreadsheet::Reader::ExcelXML::Error'],
-								package => 'ErrorInstance',
-								should_warn => 1,
-							}
+L<error_inst|/error_inst> ->
+
+	error_inst =>{
+		superclasses => ['Spreadsheet::Reader::ExcelXML::Error'],
+		package => 'ErrorInstance',
+		should_warn => 1,
+	}
 
 L<show_sub_file_size|/show_sub_file_size> => 1
 
@@ -1155,11 +1157,13 @@ B<Default attribute differences>
 
 =over
 
-L<cache_positions|/cache_positions> =>{
-					shared_strings_interface => 209715200,# 200 MB
-					styles_interface => 209715200,# 200 MB
-					worksheet_interface => 209715200,# 200 MB
-				},
+L<cache_positions|/cache_positions> ->
+
+	cache_positions =>{
+		shared_strings_interface => 209715200,# 200 MB
+		styles_interface => 209715200,# 200 MB
+		worksheet_interface => 209715200,# 200 MB
+	},
 
 =back
 
@@ -1175,11 +1179,13 @@ B<Default attribute differences>
 
 =over
 
-L<cache_positions|/cache_positions> =>{
-					shared_strings_interface => 10240,# 10 KB
-					styles_interface => 10240,# 10 KB
-					worksheet_interface => 1024,# 1 KB
-				},
+L<cache_positions|/cache_positions> ->
+
+	cache_positions =>{
+		shared_strings_interface => 10240,# 10 KB
+		styles_interface => 10240,# 10 KB
+		worksheet_interface => 1024,# 1 KB
+	},
 
 =back
 
@@ -1626,7 +1632,7 @@ it and/or modify it under the same terms as Perl itself.
 The full text of the license can be found in the
 LICENSE file included with this module.
 
-This software is copyrighted (c) 2016 by Jed Lund
+This software is copyrighted (c) 2016, 2017 by Jed Lund
 
 =head1 DEPENDENCIES
 
